Fixed the makefiles

--- a/aswsservice/Makefile
+++ b/aswsservice/Makefile
@@ -5,16 +5,16 @@ OPT_FLAGS                       = -O2 -m64 -D NO_WIN32
 CXXFLAGS                        = $(OPT_FLAGS) $(WARNING_FLAGS) $(STANDARD_FLAGS)
 LDFLAGS							= -L../3rdparty/pugixml-1.4 \
                                   -L../3rdparty/boost_1_63_0/stage/lib \
-                                  -L/opt/ibm/platformsymphonyde/de71/7.1/linux2.6-glibc2.3-x86_64/lib64 \
+                                  -L/opt/ibm/spectrumcomputing/symphonyde/de721/7.2.1/linux-x86_64/lib64/ \
                                   -L../aswscommon
 				  
 ARFLAGS                         = --target=elf64-x86-64
 
 SRCS = $(shell find . -name '*.cpp') 
-INCLUDES = -I../3rdparty/boost_1_63_0/ -I/opt/ibm/platformsymphonyde/de71/7.1/include/  -I/opt/ibm/platformsymphonyde/de71/7.1/src/
+INCLUDES = -I../3rdparty/boost_1_63_0/ -I/opt/ibm/spectrumcomputing/symphonyde/de721/7.2.1/include/  -I/opt/ibm/spectrumcomputing/symphonyde/de721/7.2.1/src/
 
 LIBS = -lboost_filesystem -lboost_serialization -lboost_program_options -lboost_random -lboost_thread -lboost_system \
-	-lpugixml -lawsworkload -pthread -lsoambase -laswscommon
+	-lpugixml -pthread -lsoambase -laswscommon
 OBJS = $(SRCS:.cpp=.o)
 DEPS = $(OBJS:.o=.d)
 
